# evaluation-and-execution-scripts

./: .gitignore  Pipfile  README.md  extract_overview_of_costs.py  nohup.out  playaround.ipynb  pyproject.toml  remove_jupyternotebook_output.py  retrigger-targeting.out
Analysis/DTW_Incidents/: analyse_dtw_incident_predicted_incident.ipynb  analyse_dtw_incident_predicted_incident_window3.ipynb
Analysis/DataPipeline/: analyze_databricks_jobs.py  analyze_prefect_flows.py
Analysis/cross_account_comparison/: cross-account-comparison.ipynb  generate_model_properties.py
Analysis/notebooks/: 1_cost_aggregation_vs_expected_data.ipynb  2_map_costs_to_targeting_and_retraining_runs.ipynb  3_cost_check_with_known_data.ipynb  3_cost_retraining.ipynb  3_cost_targeting.ipynb  get_unique_serviceNames_from_all_clouds.ipynb  v1_2_map_costs_to_targeting_and_retraining_runs.ipynb
analysis/: 1_cost_aggregation_vs_expected_data.ipynb  2_map_costs_to_targeting_and_retraining_runs.ipynb  3_cost_check_with_known_data.ipynb  3_cost_retraining.ipynb  3_cost_targeting.ipynb  cost_aggregation.ipynb  cost_aggregation_vs_expected_data.ipynb  extract_targeting_retraining_costs.ipynb  get_unique_serviceNames_from_all_clouds.ipynb  v1_2_map_costs_to_targeting_and_retraining_runs.ipynb  v1_extract_targeting_costs.ipynb
general_functions/: call_api_with_account_id.py  conncet_s3.py  constants.py  databricks_client.py  databricks_connection.py  datetime_helper.py  define_logging.py  return_account_ids.py  return_active_audiences.py  return_workspace_ids.py  sanitize_accout_name.py
(+205 files in other folders)
