[project]
name = "evaluation-and-execution-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "pandas==1.4",
    "python-dotenv==1.0.0",
    "requests==2.28.2",
    "xgboost==2.0.3",
    "mlflow==2.2.1",
    "dnspython==2.3.0",
    "tqdm==4.60.0",
    "sklearn-utils==0.0.15",
    "scikit-learn==1.2.2",
    "shap==0.41.0",
    "lightgbm==4.3.0",
    "python-logging-loki==0.3.1",
    "packaging==23.0",
    "pygam==0.8.0",
    "boto3==1.23.4",
    "imblearn==0.0",
    "awswrangler==3.7.0",
    "pydotplus==2.0.2",
    "pydot==1.4.2",
    "graphviz==0.14.2",
    "pyarrow==11.0.0",
    "s3fs==0.4.2",
    "numpy==1.24",
    "delta-sharing==1.0.3",
    "fsspec==2023.6.0",
    "pytest==8.3.2",
    "pydantic==2.8.2",
    "uvicorn==0.41.0",
    "fastapi==0.135.1",
    "segment-analytics-python==2.3.0",
    "keras==3.9.1",
    "tensorflow==2.17.1",
    "bson==0.5.10",
    "black>=25.12.0",
    "responses>=0.23.1",
    "httpx==0.28.1",
    "feature-engine==1.6.2",
    "nbformat>=5.10.4",
]
